<resources>
	<string name="app_name">Weather Forecast</string>

	<!--City-->
	<string name="novosibirsk">Новосибирск</string>
	<string name="barnaul">Барнаул</string>
	<string name="tomsk">Томск</string>
	<string name="Krasnoyarsk">Красноярск</string>
	<string name="Choice">Выбрать</string>
	<string name="Skip">Пропустить</string>
	<string name="city_name_omsk">Омск</string>
	<string name="city_name_sheregesh">Шерегеш</string>
	<string name="Forecasts">Прогноз на 4 дня</string>
	<string name="Current">Прогноз на данное время</string>
	<string name="Barnaul">Барнаул</string>
	<string name="sunset">Закат</string>
	<string name="rising">Восход</string>
	<string name="pressure">Давление</string>
	<string name="pressuredimens">мм р.с</string>
	<string name="humidity">Влажность</string>
	<string name="persentdimens">%</string>
	<string name="wind">Ветер</string>
	<string name="winddimens">м/с</string>
	<string name="night">Ночь</string>
	<string name="morning">Утро</string>
	<string name="day">День</string>
	<string name="evening">Вечер</string>
	<string name="c">C</string>

</resources>
