<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical">


		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:background="@color/colorBackground"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/item_activity_current_weather_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginTop="15dp"
				android:textSize="30sp"
				tools:text="31/01" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="8dp"
				android:textSize="20sp"
				android:text="@string/rising"
				tools:text="Восход"
				android:id="@+id/textView" />

			<TextView
				android:id="@+id/item_activity_current_weather_rising_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="40dp"
				android:layout_marginTop="8dp"
				android:textSize="20sp"
				tools:text="08:00" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/sunset"
				tools:text="Закат"
				android:layout_alignLeft="@+id/textView"
				android:layout_alignStart="@+id/textView"
				android:layout_alignTop="@+id/item_activity_current_weather_sunset_time" />

			<TextView
				android:id="@+id/item_activity_current_weather_sunset_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="40dp"
				android:layout_marginTop="30dp"
				android:textSize="20sp"
				tools:text="17:00" />

		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/item_activity_current_weather_city"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="40sp"
				tools:text="Barnaul"/>

			<ImageView
				android:id="@+id/item_activity_current_weather_image_image_view"
				android:layout_width="@dimen/weather_type_icon_size"
				android:layout_height="@dimen/weather_type_icon_size"
				android:layout_marginLeft="20dp"
				android:layout_marginTop="100dp"
				tools:src="@mipmap/ic_launcher" />

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<ProgressBar
					android:id="@+id/item_activity_current_weather_progress_bar"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="150dp"
					android:layout_gravity="center"
					android:visibility="invisible"
					android:indeterminate="true"/>
			</LinearLayout>


			<TextView
				android:id="@+id/item_activity_current_weather_degree"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="220dp"
				android:layout_marginTop="170dp"
				android:textSize="40sp"
				tools:text="+15" />


			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="300dp"
				android:textSize="27sp"
				android:text="@string/pressure"
				tools:text="Давление" />

			<TextView
				android:id="@+id/item_activity_current_weather_pressure"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="170dp"
				android:layout_marginTop="300dp"
				android:textSize="27sp"
				tools:text="747" />
			

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="350dp"
				android:textSize="27sp"
				android:text="@string/humidity"
				tools:text="Влажность" />

			<TextView
				android:id="@+id/item_activity_current_weather_humidity"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="170dp"
				android:layout_marginTop="350dp"
				android:textSize="27sp"
				tools:text="86" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="400dp"
				android:textSize="27sp"
				android:text="@string/wind"
				tools:text="Ветер" />

			<TextView
				android:id="@+id/item_activity_current_weather_wind_direction"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="130dp"
				android:layout_marginTop="400dp"
				android:textSize="27sp"
				tools:text="ЮВ" />

			<TextView
				android:id="@+id/item_activity_current_weather_wind_speed"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="220dp"
				android:layout_marginTop="400dp"
				android:textSize="27sp"
				tools:text="2" />


			<TextView
				android:id="@+id/item_activity_current_weather_cloud"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginLeft="50dp"
				android:layout_marginTop="450dp"
				android:textSize="20sp"
				tools:text="пасмурно небольшой дождь" />

		</RelativeLayout>

</LinearLayout>