<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	
	
	<android.support.v7.widget.CardView
		android:id="@+id/item_activity_weather_card_view"
		android:layout_width="365dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginBottom="5dp"
		android:layout_marginTop="15dp">
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:background="@color/colorBackground"
			android:orientation="horizontal">
			
			<TextView
				android:id="@+id/item_activity_weather_text_view_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="12dp"
				android:layout_marginTop="15dp"
				android:textSize="25sp"
				tools:text="31/01" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/rising"
				android:textSize="20sp"
				tools:text="Восход" />
			
			<TextView
				android:id="@+id/item_activity_weather_text_view_rising_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="40dp"
				android:layout_marginTop="8dp"
				android:textSize="20sp"
				tools:text="08:00" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="30dp"
				android:text="@string/sunset"
				android:textSize="20sp"
				tools:text="Закат" />
			
			<TextView
				android:id="@+id/item_activity_weather_text_view_sunset_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="40dp"
				android:layout_marginTop="30dp"
				android:textSize="20sp"
				tools:text="17:00" />
		
		</RelativeLayout>
		
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:orientation="horizontal">
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginTop="65dp"
				android:text="@string/night"
				android:textSize="20sp"
				tools:text="Ночь" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="110dp"
				android:layout_marginTop="65dp"
				android:text="@string/morning"
				android:textSize="20sp"
				tools:text="Утро" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="198dp"
				android:layout_marginTop="65dp"
				android:text="@string/day"
				android:textSize="20sp"
				tools:text="День" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="288dp"
				android:layout_marginTop="65dp"
				android:text="@string/evening"
				android:textSize="20sp"
				tools:text="Вечер" />
		
		</RelativeLayout>
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="120dp">
			
			<TextView
				android:id="@+id/item_activity_weather_text_view_night_degree"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginTop="90dp"
				android:textSize="20sp"
				tools:text="+15" />
			
			
			<TextView
				android:id="@+id/item_activity_weather_text_view_rising_degree"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="110dp"
				android:layout_marginTop="90dp"
				android:textSize="20sp"
				tools:text="+15" />
			
			
			<TextView
				android:id="@+id/item_activity_weather_text_view_day_degree"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="198dp"
				android:layout_marginTop="90dp"
				android:textSize="20sp"
				tools:text="+15" />
			
			
			<TextView
				android:id="@+id/item_activity_weather_text_view_evening_degree"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="288dp"
				android:layout_marginTop="90dp"
				android:textSize="20sp"
				tools:text="+15" />
		
		
		</RelativeLayout>
		
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="160dp">
			
			<ImageView
				android:id="@+id/item_activity_weather_image_view_00"
				android:layout_width="@dimen/mergin_leaft_for_item_weather"
				android:layout_height="@dimen/mergin_hight_for_item_weather"
				android:layout_marginLeft="20dp"
				android:layout_marginTop="120dp"
				tools:src="@mipmap/ic_launcher" />
			
			<ImageView
				android:id="@+id/item_activity_weather_image_view_06"
				android:layout_width="@dimen/mergin_leaft_for_item_weather"
				android:layout_height="@dimen/mergin_hight_for_item_weather"
				android:layout_marginLeft="110dp"
				android:layout_marginTop="120dp"
				tools:src="@mipmap/ic_launcher" />
			
			<ImageView
				android:id="@+id/item_activity_weather_image_view_12"
				android:layout_width="@dimen/mergin_leaft_for_item_weather"
				android:layout_height="@dimen/mergin_hight_for_item_weather"
				android:layout_marginLeft="198dp"
				android:layout_marginTop="120dp"
				tools:src="@mipmap/ic_launcher" />
			
			<ImageView
				android:id="@+id/item_activity_weather_image_view_18"
				android:layout_width="@dimen/mergin_leaft_for_item_weather"
				android:layout_height="@dimen/mergin_hight_for_item_weather"
				android:layout_marginLeft="288dp"
				android:layout_marginTop="120dp"
				tools:src="@mipmap/ic_launcher" />
		
		</RelativeLayout>
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<TextView
				android:id="@+id/item_activity_weather_text_view_night_cloud"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="12dp"
				android:layout_marginTop="160dp"
				android:textSize="12sp"
				tools:text="пасмурно небольшой дождь" />
			
			<TextView
				android:id="@+id/item_activity_weather_text_view_rising_cloud"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="112dp"
				android:layout_marginTop="160dp"
				android:textSize="12sp"
				tools:text="пасмурно небольшой дождь" />
			
			<TextView
				android:id="@+id/item_activity_weather_text_view_day_cloud"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="205dp"
				android:layout_marginTop="160dp"
				android:textSize="12sp"
				tools:text="пасмурно небольшой дождь" />
			
			<TextView
				android:id="@+id/item_activity_weather_text_view_evening_cloud"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="285dp"
				android:layout_marginTop="160dp"
				android:textSize="12sp"
				tools:text="пасмурно небольшой дождь" />
		
		</RelativeLayout>
	
	
	</android.support.v7.widget.CardView>

</LinearLayout>